[gd_scene load_steps=2 format=3 uid="uid://bte3a6r6kao1i"]

[ext_resource type="Script" path="res://sky_editor_layer_entry.gd" id="1_i4ma7"]

[node name="LayerEntry" type="MarginContainer"]
offset_right = 179.0
offset_bottom = 145.0
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 2
script = ExtResource("1_i4ma7")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
auto_translate_mode = 1
layout_mode = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="NameTexture" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
auto_translate_mode = 1
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/NameTexture"]
auto_translate_mode = 1
layout_mode = 2
theme_override_constants/separation = 10

[node name="SettingLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/NameTexture/HBoxContainer"]
auto_translate_mode = 1
layout_mode = 2
size_flags_horizontal = 3
text = "Name"

[node name="NameValue" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/NameTexture/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
alignment = 0
text_overrun_behavior = 3
icon_alignment = 2
expand_icon = true

[node name="InFrontBool" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
auto_translate_mode = 1
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/InFrontBool"]
auto_translate_mode = 1
layout_mode = 2
theme_override_constants/separation = 10

[node name="SettingLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/InFrontBool/HBoxContainer"]
auto_translate_mode = 1
layout_mode = 2
size_flags_horizontal = 3
text = "In Front"

[node name="InFrontValue" type="CheckButton" parent="PanelContainer/MarginContainer/VBoxContainer/InFrontBool/HBoxContainer"]
unique_name_in_owner = true
auto_translate_mode = 1
layout_mode = 2

[node name="OpacityFloat" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
auto_translate_mode = 1
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/OpacityFloat"]
auto_translate_mode = 1
layout_mode = 2
theme_override_constants/separation = 10

[node name="SettingLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/OpacityFloat/HBoxContainer"]
auto_translate_mode = 1
layout_mode = 2
size_flags_horizontal = 3
text = "Opacity"

[node name="OpacityValue" type="SpinBox" parent="PanelContainer/MarginContainer/VBoxContainer/OpacityFloat/HBoxContainer"]
unique_name_in_owner = true
auto_translate_mode = 1
layout_mode = 2
step = 0.001
allow_greater = true
allow_lesser = true
alignment = 2
custom_arrow_step = 0.01

[node name="FogTintFloat" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
auto_translate_mode = 1
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/FogTintFloat"]
auto_translate_mode = 1
layout_mode = 2
theme_override_constants/separation = 10

[node name="SettingLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/FogTintFloat/HBoxContainer"]
auto_translate_mode = 1
layout_mode = 2
size_flags_horizontal = 3
text = "Fog Tint"

[node name="FogTintValue" type="SpinBox" parent="PanelContainer/MarginContainer/VBoxContainer/FogTintFloat/HBoxContainer"]
unique_name_in_owner = true
auto_translate_mode = 1
layout_mode = 2
step = 0.001
allow_greater = true
allow_lesser = true
alignment = 2
custom_arrow_step = 0.01

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/NameTexture/HBoxContainer/NameValue" to="PanelContainer/MarginContainer" method="_on_name_texture_pressed"]
[connection signal="toggled" from="PanelContainer/MarginContainer/VBoxContainer/InFrontBool/HBoxContainer/InFrontValue" to="PanelContainer/MarginContainer" method="_on_in_front_value_changed"]
[connection signal="value_changed" from="PanelContainer/MarginContainer/VBoxContainer/OpacityFloat/HBoxContainer/OpacityValue" to="PanelContainer/MarginContainer" method="_on_opacity_value_changed"]
[connection signal="value_changed" from="PanelContainer/MarginContainer/VBoxContainer/FogTintFloat/HBoxContainer/FogTintValue" to="PanelContainer/MarginContainer" method="_on_fog_tint_value_changed"]
